# OneAgent-SDK-Python-AutoInstrumentation

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
autodynatrace/: __init__.py  log.py  sdk.py
autodynatrace/wrappers/: celery.py  custom.py  flask.py  pymongo.py  sqlalchemy.py  urllib3.py  utils.py  w_celery.py  w_custom.py  w_flask.py  w_pymongo.py  w_sqlalchemy.py  w_urllib3.py
autodynatrace/wrappers/aiohttp/: wrapper.py
autodynatrace/wrappers/asyncio/: __init__.py  wrapper.py
autodynatrace/wrappers/bottle/: wrapper.py
autodynatrace/wrappers/celery/: wrapper.py
autodynatrace/wrappers/concurrent/: wrapper.py
autodynatrace/wrappers/confluent_kafka/: __init__.py  wrapper.py
autodynatrace/wrappers/custom/: __init__.py  wrapper.py
autodynatrace/wrappers/cx_Oracle/: wrapper.py
autodynatrace/wrappers/dbapi/: __init__.py
autodynatrace/wrappers/django/: __init__.py  apps.py  db.py  middlewares.py  utils.py  wrapper.py
autodynatrace/wrappers/django_stomp/: consumer.py  publisher.py  utils.py  wrapper.py
autodynatrace/wrappers/fastapi/: middleware.py  wrapper.py
autodynatrace/wrappers/flask/: wrapper.py
autodynatrace/wrappers/grpc/: wrapper.py
autodynatrace/wrappers/oracledb/: wrapper.py
autodynatrace/wrappers/paramiko/: __init__.py  wrapper.py
autodynatrace/wrappers/pika/: wrapper.py
autodynatrace/wrappers/psycopg2/: wrapper.py
autodynatrace/wrappers/redis/: utils.py  (+1 more)
examples/custom_service/: example.py
tests/: test_custom.py  test_django.py  test_motor.py  test_psycopg2.py
(+10 files in other folders)
