[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodynatrace"
dynamic = ["version"]
description = "Auto instrumentation for the OneAgent SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.6"
authors = [
    { name = "David Lopes", email = "david.lopes@dynatrace.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "autowrapt>=1.0",
    "oneagent-sdk>=1.3.0",
    "six>=1.10.0",
    "wrapt>=1.11.2",
]

[project.entry-points.autodynatrace]
string = "autodynatrace:load"

[project.urls]
Homepage = "https://github.com/dlopes7/autodynatrace"
"Issue Tracker" = "https://github.com/dlopes7/autodynatrace/issues"

[tool.hatch.version]
path = "autodynatrace/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/autodynatrace",
]
